refactoring & fixing bugs